--- a/Persistence.SqlServer.csproj
+++ b/Persistence.SqlServer.csproj
@@ -2,10 +2,25 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Copyright>Dang Duong</Copyright>
+    <PackageProjectUrl>https://github.com/dangdp/Persistence.SqlServer</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageId>DangDP.Persistence.SqlServer</PackageId>
+	<Version>1.0.0.3</Version>
+	<PackageLicenseExpression></PackageLicenseExpression>
+	<PackageLicenseFile>MIT.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="MIT.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
